# brepmatching

./: .gitignore  CMakeLists.txt  README.md  coincidence.txt  environment.yml  setup.py  test.py  train.py  validation.ipynb
brepmatching/: data.py  loss.py  matching.py  matching_model.py  models.py  rendering.py  transforms.py  utils.py  validation.ipynb  visualization.py
coincidence_matching/: CMakeLists.txt  large_cube.x_t  long_box.x_t  longer_box.x_t  match.json  med_cube.x_t  output_baseline1.x_t  output_baseline2.x_t  shifted_cube.x_t  short_box.x_t  small_cube.x_t
coincidence_matching/include/: cm_lib.h
coincidence_matching/src/: bindings.cpp  cm_lib.cpp  debug.cpp  main.cpp
data/: example.x_t  output_baseline1.x_t  output_baseline2.x_t
notebooks/: bad_bolts.csv  count_bad_baseline_matches.ipynb  debug_exact_matching.ipynb  debug_missing_ids.ipynb  embedding_example.ipynb  exact_matching_errors.ipynb  final_complete_results.csv  manual_baseline.ipynb  onshape_baseline_metrics.ipynb  plot_metrics.ipynb  prototype_results.csv  prototype_results_0_0_0_0_0.csv  render_example.ipynb  render_onshape_baseline.ipynb  scratch.ipynb  test_coincidence_matching.ipynb  test_final_datasets.ipynb  test_matching.ipynb  test_onshape_baseline.ipynb  test_result.csv  validation.ipynb  var_bl.x_t  var_orig.x_t  visualize.ipynb
scripts/: RerunMatchFile.py  RunBaselineOnGeo.py  RunBaselineOnZip.py  check_download.py  client.py  matchGenHelpFunctions.py  preprocess.py  redownload_parts.py  render_sample.py
